--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1008,6 +1008,7 @@ input.text-white::placeholder {
 section {
   position: relative;
   padding: 6.5rem 0;
+  padding-bottom: 0rem;
 }
 
 .with-pattern-1::before {
