--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1,16 +1,19 @@
-/*
-=========================================
-=========================================
 
-   Nova | Bootstrap app landing
-
-=========================================
-========================================= */
-/*
 * ===================================================
 *    Custom Bootstrapious Utils
 * ===================================================
 */
+
+
+/*
+   Addons
+   ------------------------
+*/
+.logo-img img
+{
+    width: 100%;
+}
+
 /*
    Icons
    ------------------------
