--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1,5 +1,5 @@
 
-* ===================================================
+/* ===================================================
 *    Custom Bootstrapious Utils
 * ===================================================
 */
