--- a/css/style.default.css
+++ b/css/style.default.css
@@ -12,6 +12,16 @@
 .logo-img img
 {
     width: 100%;
+   filter: grayscale();
+}
+.logo-img img
+{
+    width: 100%;
+    filter: grayscale(1);
+}
+.cardl:hover img {
+    width: 100%;
+    filter: grayscale(0);
 }
 
 /*
