--- a/css/style.default.css
+++ b/css/style.default.css
@@ -4,6 +4,11 @@
 * ===================================================
 */
 
+@media (min-width: 768px)
+   .logo-img img {
+       width: 125px;
+   }
+}
 
 /*
    Addons
