--- a/css/style.default.css
+++ b/css/style.default.css
@@ -15,6 +15,9 @@
    width: 175px;
    filter: grayscale(1);
 }
+cardl img {
+    filter: grayscale(1);
+}
 .cardl:hover img {
     filter: grayscale(0);
 }
