--- a/css/style.default.css
+++ b/css/style.default.css
@@ -2058,32 +2058,32 @@ h6,
 
 h1,
 .h1 {
-  font-size: 3rem;
+  font-size: 1.25rem;
 }
 
 h2,
 .h2 {
-  font-size: 2.4rem;
+  font-size: 1rem;
 }
 
 h3,
 .h3 {
-  font-size: 1.75rem;
+  font-size: .75rem;
 }
 
 h4,
 .h4 {
-  font-size: 1.5rem;
+  font-size: .5rem;
 }
 
 h5,
 .h5 {
-  font-size: 1.25rem;
+  font-size: .25rem;
 }
 
 h6,
 .h6 {
-  font-size: 1rem;
+  font-size: .25rem;
 }
 
 .lead {
